--- a/serbioneer-front/src/styles.sass
+++ b/serbioneer-front/src/styles.sass
@@ -9,3 +9,6 @@ $primary-background: #aae0f9
         color: #043e77
     &.white
         color: white
+
+.btn-theme
+    background-color: $primary-background
