--- a/serbioneer-front/src/app/components/login-register/register/register.component.html
+++ b/serbioneer-front/src/app/components/login-register/register/register.component.html
@@ -1,1 +1,31 @@
-<p>register works!</p>
+<form [formGroup] = "registerForm" (ngSubmit) = "onSubmit()">
+    <div class="form-group">
+        <label for="email">Email</label>
+        <input class="form-control" type="email" id="email" formControlName="email">
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input class="form-control" type="password" id="password" formControlName="password">
+    </div>
+    <div class="form-group">
+        <label for="confirm-password">Confirm password</label>
+        <input class="form-control" type="password" id="confirm-password" formControlName="confirmPassword">
+    </div>
+    <div class="form-group">
+        <label for="name">Name</label>
+        <input class="form-control" type="text" id="name" formControlName="name">
+    </div>
+    <div class="form-group">
+        <label for="surname">Surname</label>
+        <input class="form-control" type="text" id="surname" formControlName="surname">
+    </div>
+    <div>
+        <button
+            class="btn btn-theme"
+            type="submit"
+            [disabled] = "registerForm.invalid"
+        >
+            Register
+        </button>
+    </div>
+</form>
