--- a/serbioneer-front/src/app/components/login-register/register/register.component.html
+++ b/serbioneer-front/src/app/components/login-register/register/register.component.html
@@ -1,23 +1,45 @@
 <form [formGroup] = "registerForm" (ngSubmit) = "onSubmit()">
     <div class="form-group">
-        <label for="email">Email</label>
-        <input class="form-control" type="email" id="email" formControlName="email">
+        <mat-form-field appearance="fill">
+            <mat-label>Enter your email</mat-label>
+            <input matInput placeholder="something@example.com" formControlName ="email">
+            <mat-error *ngIf="registerForm.get('email')?.invalid">{{getEmailErrorMessage()}}</mat-error>
+          </mat-form-field>
+    </div>
+    <div class="form-group password-field">
+        <mat-form-field appearance="fill">
+            <mat-label>Enter your password</mat-label>
+            <input matInput [type]="hide ? 'password' : 'text'"  formControlName ="password">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+            <mat-error *ngIf="registerForm.get('password')?.invalid">{{getRequiredFieldErrorMessage('password')}}</mat-error>
+          </mat-form-field>
     </div>
     <div class="form-group">
-        <label for="password">Password</label>
-        <input class="form-control" type="password" id="password" formControlName="password">
+        <mat-form-field appearance="fill">
+            <mat-label>Repeat entered password</mat-label>
+            <input matInput [type]="hide ? 'password' : 'text'"  formControlName ="confirmPassword">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+            <mat-error *ngIf="registerForm.get('confirmPassword')?.invalid">{{getRequiredFieldErrorMessage('confirmPassword')}}</mat-error>
+            <mat-error *ngIf="registerForm.hasError('passwordsDontMatch')">{{getPasswordsMatch()}}</mat-error>
+          </mat-form-field>
     </div>
     <div class="form-group">
-        <label for="confirm-password">Confirm password</label>
-        <input class="form-control" type="password" id="confirm-password" formControlName="confirmPassword">
+        <mat-form-field appearance="fill">
+            <mat-label>Name</mat-label>
+            <input matInput formControlName ="name">
+            <mat-error *ngIf="registerForm.get('name')?.invalid">{{getRequiredFieldErrorMessage('name')}}</mat-error>
+          </mat-form-field>
     </div>
     <div class="form-group">
-        <label for="name">Name</label>
-        <input class="form-control" type="text" id="name" formControlName="name">
-    </div>
-    <div class="form-group">
-        <label for="surname">Surname</label>
-        <input class="form-control" type="text" id="surname" formControlName="surname">
+        <mat-form-field appearance="fill">
+            <mat-label>Surname</mat-label>
+            <input matInput formControlName ="surname">
+            <mat-error *ngIf="registerForm.get('surname')?.invalid">{{getRequiredFieldErrorMessage('surname')}}</mat-error>
+          </mat-form-field>
     </div>
     <div>
         <button
