--- a/serbioneer-front/src/app/components/header/header.component.html
+++ b/serbioneer-front/src/app/components/header/header.component.html
@@ -1,7 +1,12 @@
 <mat-toolbar>
+    <button mat-icon-button aria-label="Home icon-button with logo"
+        (click)="onHome()">
     <a>
         <span class="flag red">Serb</span>
         <span class="flag blue">io</span>
         <span class="flag white">neer</span>
+        <span class="logo">s</span>
     </a>
+        <mat-icon svgIcon="logo"></mat-icon>
+    </button>
 </mat-toolbar>
