--- a/serbioneer-front/src/app/components/header/header.component.sass
+++ b/serbioneer-front/src/app/components/header/header.component.sass
@@ -1,4 +1,15 @@
 @import "../../../styles.sass"
 
 mat-toolbar
-    background: $primary-background
+  background: $primary-background
+
+span.logo
+  color: $primary-background
+
+button
+  font-size: larger
+
+.mat-icon
+  height: 40px
+  width: 40px
+  line-height: 40px 
