--- a/serbioneer-front/src/styles.sass
+++ b/serbioneer-front/src/styles.sass
@@ -15,3 +15,16 @@ $primary-background: #aae0f9
 
 button
     border-width: 0px !important
+
+.form-field
+    min-width: 250px
+form
+    text-align: center
+.card
+    background-color: transparent
+.card-body
+    padding: 2.25rem
+
+.mat-tab-label, .mat-tab-link
+    font-size: 18px
+    font-weight: 550
