--- a/serbioneer-front/src/app/components/login-register/login-register.component.html
+++ b/serbioneer-front/src/app/components/login-register/login-register.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-    <div class="row">
+    <!--<div class="row">
         <div class="col">
             <img src="../../assets/images/baner_pozadina.png" class="mx-auto d-block" alt="Serbioneer banner">
         </div>
-    </div>
+    </div>-->
     <div class="row">
         <div class="col-7 mx-auto">
             <nav mat-tab-nav-bar mat-align-tabs="center">
