--- a/serbioneer-front/src/app/components/homepage/homepage.component.html
+++ b/serbioneer-front/src/app/components/homepage/homepage.component.html
@@ -1,1 +1,8 @@
-<p>homepage works!</p>
+<div class="row">
+    <div class="col-md-6">
+        <app-table-view></app-table-view>
+    </div>
+    <div class="col-md-6">
+        <app-map-view></app-map-view>
+    </div>
+</div>
