--- a/serbioneer-front/src/app/components/homepage/table-view/table-view.component.html
+++ b/serbioneer-front/src/app/components/homepage/table-view/table-view.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-xs-8">
+    <div class="col-md-8">
         <mat-form-field class="chip-list">
             <mat-label>Cultural site categories</mat-label>
             <mat-chip-list #chipList aria-label="Cultural site categories selection">
@@ -26,5 +26,8 @@
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
+    </div>
+    <div class="col-md-8">
+      <app-cultural-sites-table></app-cultural-sites-table>
     </div>
 </div>
