--- a/serbioneer-front/src/app/components/homepage/table-view/cultural-sites-table/cultural-sites-table.component.html
+++ b/serbioneer-front/src/app/components/homepage/table-view/cultural-sites-table/cultural-sites-table.component.html
@@ -1,1 +1,32 @@
-<p>cultural-sites-table works!</p>
+<div class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource.content">
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+    <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+    </ng-container>
+
+    <!-- Address Column -->
+    <ng-container matColumnDef="address">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
+    <td mat-cell *matCellDef="let row"> {{row.address}}% </td>
+    </ng-container>
+
+    <!-- City Column -->
+    <ng-container matColumnDef="city">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> City </th>
+    <td mat-cell *matCellDef="let row"> {{row.city}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+</table>
+
+<mat-paginator 
+        [length]="dataSource.totalElements" 
+        [pageSize]="dataSource.size" 
+        [pageSizeOptions]="[2,5,10]"
+        (page)="pageEvent = $event; onPaginateChange($event)"
+></mat-paginator>
+</div>
