--- a/serbioneer-front/src/app/components/homepage/table-view/cultural-sites-table/cultural-sites-table.component.html
+++ b/serbioneer-front/src/app/components/homepage/table-view/cultural-sites-table/cultural-sites-table.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z8">
+<div>
 <table mat-table [dataSource]="dataSource.content">
     <!-- Name Column -->
     <ng-container matColumnDef="name">
