--- a/serbioneer-front/src/app/components/homepage/table-view/cultural-sites-table/cultural-sites-table.component.html
+++ b/serbioneer-front/src/app/components/homepage/table-view/cultural-sites-table/cultural-sites-table.component.html
@@ -1,15 +1,32 @@
 <div>
 <table mat-table [dataSource]="dataSource.content">
+
+    <!-- Header -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
     <!-- Name Column -->
     <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
     <td mat-cell *matCellDef="let row"> {{row.name}} </td>
     </ng-container>
 
+    <!-- Category Column -->
+    <ng-container matColumnDef="category">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
+    <td mat-cell *matCellDef="let row"> {{row.category}} </td>
+    </ng-container>
+
+    <!-- CategoryType Column -->
+    <ng-container matColumnDef="categoryType">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Category Type </th>
+    <td mat-cell *matCellDef="let row"> {{row.categoryType}} </td>
+    </ng-container>
+
     <!-- Address Column -->
     <ng-container matColumnDef="address">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
-    <td mat-cell *matCellDef="let row"> {{row.address}}% </td>
+    <td mat-cell *matCellDef="let row"> {{row.address}} </td>
     </ng-container>
 
     <!-- City Column -->
@@ -17,9 +34,6 @@
     <th mat-header-cell *matHeaderCellDef mat-sort-header> City </th>
     <td mat-cell *matCellDef="let row"> {{row.city}} </td>
     </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
 </table>
 
