#US-27-T-2 and #US-28-T-2
Edit personal information implemented.
Also implemented 'authenticated user update personal information' because it only required one additional line change

--- a/serbioneer-front/src/app/components/new-news-article/new-news-article.component.html
+++ b/serbioneer-front/src/app/components/new-news-article/new-news-article.component.html
@@ -1,4 +1,4 @@
-<div class="card col-7 mx-auto">
+<!--<div class="card col-7 mx-auto">
     <div class="card-body">
         <div>
             <div class="title">News about {{data.name}}</div>
@@ -40,4 +40,4 @@
             </div>
         </form>
     </div>
-</div>
+</div>-->
