Add logout button

--- a/serbioneer-front/src/app/components/header/header.component.html
+++ b/serbioneer-front/src/app/components/header/header.component.html
@@ -9,4 +9,9 @@
     </a>
         <mat-icon svgIcon="logo"></mat-icon>
     </button>
+    <span class="logout-span"></span>
+    <button mat-raised-button color="primary" type="button" (click)="logout()">Logout</button>
+    
+    
+    
 </mat-toolbar>
