--- a/serbioneer-front/src/app/components/newsfeed/news/news.component.sass
+++ b/serbioneer-front/src/app/components/newsfeed/news/news.component.sass
@@ -10,3 +10,20 @@
   display: flex
   justify-content: center
   align-items: center
+  
+
+.example-item 
+  height: 100%
+  width: 100%
+  margin: 5px
+
+
+.cdk-virtual-scroll-viewport
+  overflow-y: hidden
+  overflow: scroll
+  -webkit-overflow-scrolling: touch
+  display: flex
+  flex-direction: row
+  writing-mode: vertical-lr
+  height: 400px
+  width: 400px
