--- a/serbioneer-front/src/app/components/header/header.component.sass
+++ b/serbioneer-front/src/app/components/header/header.component.sass
@@ -6,7 +6,7 @@ mat-toolbar
 span.logo
   color: $primary-background
 
-button
+button.home
   font-size: larger
 
 .logout-span
@@ -16,3 +16,7 @@ button
   height: 40px
   width: 40px
   line-height: 40px 
+
+.button-container
+  display: flex
+  justify-content: center
