--- a/serbioneer-front/src/app/components/login-register/login/login.component.html
+++ b/serbioneer-front/src/app/components/login-register/login/login.component.html
@@ -1,17 +1,17 @@
 <div class="card col-7 mx-auto">
     <div class="card-body">
-        <form [formGroup] = "loginForm" (ngSubmit) = "onSubmit()">
+        <form id = "login-form" [formGroup] = "loginForm" (ngSubmit) = "onSubmit()">
             <div class="form-group">
                 <mat-form-field appearance="fill" class="form-field">
                     <mat-label>Enter your email</mat-label>
-                    <input matInput placeholder="something@example.com" formControlName ="email">
+                    <input id = "email-input" matInput placeholder="something@example.com" formControlName ="email">
                     <mat-error *ngIf="loginForm.get('email')?.invalid">{{getEmailErrorMessage()}}</mat-error>
                 </mat-form-field>
             </div>
             <div class="form-group">
                 <mat-form-field appearance="fill" class="form-field">
                     <mat-label>Enter your password</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'"  formControlName ="password">
+                    <input id = "password-input" matInput [type]="hide ? 'password' : 'text'"  formControlName ="password">
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
@@ -19,7 +19,7 @@
                 </mat-form-field>
             </div>
             <div>
-                <button class="btn btn-theme" type="submit" [disabled]="loginForm.invalid">
+                <button id = "login-btn" class="btn btn-theme" type="submit" [disabled]="loginForm.invalid">
                     Log in
                 </button>
             </div>
