#US-34-T-2 Create authenticated user view of subscribed cultural sites #US-14-T-2 Add delete mechanism for comments
- dodat subscribe/unsubscribe
- uvezano dodavanje novosti
- uvezano dodavanje komentara
- uvezano editovanje komentara
- uvezano kreiranje i promena rejtinga

--- a/serbioneer-front/src/app/components/homepage/table-view/cultural-sites-table/cultural-sites-table.component.html
+++ b/serbioneer-front/src/app/components/homepage/table-view/cultural-sites-table/cultural-sites-table.component.html
@@ -3,7 +3,7 @@
 
     <!-- Header -->
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onClickRow(row.id)"></tr>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
