--- a/serbioneer-front/src/styles.sass
+++ b/serbioneer-front/src/styles.sass
@@ -28,3 +28,5 @@ form
 .mat-tab-label, .mat-tab-link
     font-size: 18px
     font-weight: 550
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap'
