--- a/serbioneer-front/src/app/components/homepage/homepage.component.html
+++ b/serbioneer-front/src/app/components/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div id = "homepage" class="row">
     <div class="col-md-6">
         <app-table-view></app-table-view>
     </div>
