--- a/serbioneer-front/src/app/components/login-register/register/register.component.html
+++ b/serbioneer-front/src/app/components/login-register/register/register.component.html
@@ -1,10 +1,10 @@
 <div class="card col-7 mx-auto">
     <div class="card-body">
-        <form [formGroup] = "registerForm" (ngSubmit) = "onSubmit()">
+        <form id= "register-form" [formGroup] = "registerForm" (ngSubmit) = "onSubmit()">
             <div class="form-group">
                 <mat-form-field appearance="fill" class="form-field">
                     <mat-label>Enter your email</mat-label>
-                    <input matInput placeholder="something@example.com" formControlName ="email">
+                    <input id="email-input" matInput placeholder="something@example.com" formControlName ="email">
                     <mat-error *ngIf="registerForm.get('email')?.invalid">{{getEmailErrorMessage()}}</mat-error>
                 </mat-form-field>
             </div>
@@ -12,9 +12,9 @@
                 <div class="form-group">
                     <mat-form-field appearance="fill" class="form-field">
                         <mat-label>Enter your password</mat-label>
-                        <input matInput [type]="hide ? 'password' : 'text'"  formControlName ="password">
-                        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        <input id = "password-input" matInput [type]="hide1 ? 'password' : 'text'"  formControlName ="password">
+                        <button mat-icon-button matSuffix (click)="hide1 = !hide1" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide1">
+                        <mat-icon>{{hide1 ? 'visibility_off' : 'visibility'}}</mat-icon>
                         </button>
                         <mat-error *ngIf="registerForm.get('password')?.invalid">{{getRequiredFieldErrorMessage('password')}}</mat-error>
                     </mat-form-field>
@@ -22,10 +22,10 @@
                 <div class="form-group">
                     <mat-form-field appearance="fill" class="form-field">
                         <mat-label>Repeat entered password</mat-label>
-                        <input matInput [type]="hide ? 'password' : 'text'"  formControlName ="confirmPassword"
+                        <input id = "repeat-password-input" matInput [type]="hide2 ? 'password' : 'text'"  formControlName ="confirmPassword"
                             [errorStateMatcher]="confirmPasswordMatcher">
-                        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        <button mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide2">
+                        <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
                         </button>
                         <mat-error *ngIf="registerForm.get('confirmPassword')?.invalid">{{getRequiredFieldErrorMessage('confirmPassword')}}</mat-error>
                         <mat-error *ngIf="registerForm.controls.passwordGroup.hasError('passwordsDontMatch')">{{getPasswordsMatch()}}</mat-error>
@@ -35,19 +35,20 @@
             <div class="form-group">
                 <mat-form-field appearance="fill" class="form-field">
                     <mat-label>Name</mat-label>
-                    <input matInput formControlName ="name">
+                    <input id = "name-input" matInput formControlName ="name">
                     <mat-error *ngIf="registerForm.get('name')?.invalid">{{getNameErrorMessage('name')}}</mat-error>
                 </mat-form-field>
             </div>
             <div class="form-group">
                 <mat-form-field appearance="fill" class="form-field">
                     <mat-label>Surname</mat-label>
-                    <input matInput formControlName ="surname">
+                    <input id = "surname-input" matInput formControlName ="surname">
                     <mat-error *ngIf="registerForm.get('surname')?.invalid">{{getNameErrorMessage('surname')}}</mat-error>
                 </mat-form-field>
             </div>
             <div>
                 <button
+                    id = "register-btn"
                     class="btn btn-theme"
                     type="submit"
                     [disabled] = "registerForm.invalid"
