#US-36-T-2, #US-37-T-2, #US-38-T-2, #US-39-T-2
Implemented adding, editing and deleting of both categories and their types.
Front-end validation for editing needs work.
Also worked on styling.

--- a/serbioneer-front/src/app/components/admin/categories/categories.component.sass
+++ b/serbioneer-front/src/app/components/admin/categories/categories.component.sass
@@ -1,2 +1,31 @@
+@import "../../../../styles.sass"
+
 table
   width: 100%
+
+th
+  text-align: center !important
+
+th, td
+  padding-left: 24px
+
+.mat-header-row
+  background-color: $lighter-primary
+
+.mat-header-cell
+  font-size: 15px
+  font-weight: 600
+
+.mat-row:nth-child(even)
+  background-color: $light-primary
+
+td.mat-cell:last-of-type
+  padding-right: 10px
+
+.title
+  text-align: center
+  font-weight: bolder
+  margin-bottom: 20px
+
+.choose-cat
+  cursor: pointer
