--- a/serbioneer-front/src/app/components/admin/categories/categories.component.html
+++ b/serbioneer-front/src/app/components/admin/categories/categories.component.html
@@ -1,24 +1,34 @@
-<div class="col-md-11">
+<div class="col-md-12">
     <div class="row">
         <div class="col-md-6">
-            <h2>Cultural site categories</h2>
+            <h2 class="title">Cultural site categories</h2>
             <div class="row">
                 <div class="col-md-6">
                     <table mat-table [dataSource]="categoryDataSource.content" class="mat-elevation-z8">
+                        <!-- No data row -->
+                        <tr class="mat-row" *matNoDataRow>
+                            <td class="mat-cell" colspan="2">No existing categories.</td>
+                        </tr>
                         <!-- Header tabele -->
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let category; columns: displayedColumns;" (click)="choseCategory(category)"></tr>
+                        <tr mat-row *matRowDef="let category; columns: displayedColumns;"></tr>
                         <!-- Dinamicke kolone (ime) -->
                         <ng-container matColumnDef="name">
                             <th mat-header-cell *matHeaderCellDef> Category name </th>
-                            <td mat-cell *matCellDef="let category"> {{ category.name }} </td>
+                            <td mat-cell *matCellDef="let category" (click)="chooseCategory(category)" class="choose-cat"> {{ category.name }} </td>
                         </ng-container>
                         <!-- Staticke kolone (akcije) -->
                         <ng-container matColumnDef="actions">
                             <th mat-header-cell *matHeaderCellDef> Actions </th>
-                            <td mat-cell *matCellDef="let category"> 
-                                <i class="material-icons">edit</i>
-                                <i class="material-icons">delete</i>
+                            <td mat-cell *matCellDef="let category">
+                                <button class="btn" [satPopoverAnchor]="editPopover" (click)="editPopover.toggle()"><i class="material-icons">edit</i></button>
+                                <sat-popover #editPopover
+                                    true
+                                    xAlign="after"
+                                    (closed)="updateCategory(category, $event)">
+                                    <app-inline-edit [value]="category.name" [entity]="categoryEntity"></app-inline-edit>
+                                </sat-popover>
+                                <button class="btn" (click)="confirmDeleteCategory(category)"><i class="material-icons">delete</i></button>
                             </td>
                         </ng-container>
                     </table>
@@ -26,28 +36,44 @@
                         [length]="categoryDataSource.totalElements" 
                         [pageSize]="categoryDataSource.size" 
                         [pageSizeOptions]="[2,5,10]"
-                        (page)="pageEvent = $event; onCategoryPaginateChange($event)"
+                        (page)="categoryPageEvent = $event; onCategoryPaginateChange($event)"
                     ></mat-paginator>
                 </div>
                 <div class="col-md-6">
-                    <mat-form-field appearance="fill" class="form-field">
-                        <mat-label>Add new cultural site category</mat-label>
-                        <input matInput placeholder="">
-                    </mat-form-field>
-                    <button mat-raised-button color="primary">
-                        Add
-                    </button>
+                    <form [formGroup]="addCategoryForm" (ngSubmit)="onAddCategory()">
+                        <mat-form-field appearance="fill" class="form-field">
+                            <mat-label>Add new cultural site category</mat-label>
+                            <input matInput formControlName="name">
+                            <mat-error *ngIf="addCategoryForm.get('name')?.invalid">{{ getCategoryNameErrorMessage() }}</mat-error>
+                        </mat-form-field>
+                        <button mat-raised-button [disabled]="addCategoryForm.invalid" class="btn btn-theme">
+                            Add category
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
-        <div class="col-md-6">
-            <h2>Current cultural category types</h2>
+        <mat-divider [vertical]="true"></mat-divider>
+        <div class="col-md-5">
+            <div *ngIf="chosenCategory; then categoryTitle else noCategoryTitle"></div>
+            <ng-template #categoryTitle>
+                <h2 class="title">{{ chosenCategory.name }} types</h2>
+            </ng-template>
+            <ng-template #noCategoryTitle>
+                <h2 class="title">Choose a category</h2>
+            </ng-template>
             <div class="row">
                 <div class="col-md-6">
                     <table mat-table [dataSource]="typeDataSource.content" class="mat-elevation-z8">
                         <!-- No data row -->
                         <tr class="mat-row" *matNoDataRow>
-                            <td class="mat-cell" colspan="2">Please choose a cultural site category to view its types.</td>
+                            <div *ngIf="chosenCategory; then categoryChosen else noCategory"></div>
+                            <ng-template #categoryChosen>
+                                <td class="mat-cell" colspan="2">No existing types for chosen category.</td>
+                            </ng-template>
+                            <ng-template #noCategory>
+                                <td class="mat-cell" colspan="2">Please choose a category to view its types.</td>
+                            </ng-template>
                         </tr>
                         <!-- Header tabele -->
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -60,9 +86,15 @@
                         <!-- Staticke kolone (akcije) -->
                         <ng-container matColumnDef="actions">
                             <th mat-header-cell *matHeaderCellDef> Actions </th>
-                            <td mat-cell *matCellDef="let type"> 
-                                <i class="material-icons">edit</i>
-                                <i class="material-icons">delete</i>
+                            <td mat-cell *matCellDef="let type">
+                                <button class="btn" [satPopoverAnchor]="editPopover" (click)="editPopover.toggle()"><i class="material-icons">edit</i></button>
+                                <sat-popover #editPopover
+                                    true
+                                    xAlign="after"
+                                    (closed)="updateType(type, $event)">
+                                    <app-inline-edit [value]="type.name" [entity]="typeEntity"></app-inline-edit>
+                                </sat-popover>
+                                <button class="btn" (click)="confirmDeleteType(type)"><i class="material-icons">delete</i></button>
                             </td>
                         </ng-container>
                     </table>
@@ -70,17 +102,20 @@
                         [length]="typeDataSource.totalElements" 
                         [pageSize]="typeDataSource.size" 
                         [pageSizeOptions]="[2,5,10]"
-                        (page)="pageEvent = $event; onTypePaginateChange($event)"
+                        (page)="typePageEvent = $event; onTypePaginateChange($event)"
                     ></mat-paginator>
                 </div>
                 <div class="col-md-6">
-                    <mat-form-field appearance="fill" class="form-field">
-                        <mat-label>Add new cultural category type</mat-label>
-                        <input matInput placeholder="">
-                    </mat-form-field>
-                    <button mat-raised-button color="primary">
-                        Add
-                    </button>
+                    <form [formGroup]="addTypeForm" (ngSubmit)="onAddType()">
+                        <mat-form-field appearance="fill" class="form-field">
+                            <mat-label>Add new cultural category type</mat-label>
+                            <input matInput formControlName="name">
+                            <mat-error *ngIf="addTypeForm.get('name')?.invalid">{{ getTypeNameErrorMessage() }}</mat-error>
+                        </mat-form-field>
+                        <button mat-raised-button [disabled]="addTypeForm.invalid" class="btn btn-theme">
+                            Add type
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
