--- a/serbioneer-front/src/app/components/change-password/change-password.component.html
+++ b/serbioneer-front/src/app/components/change-password/change-password.component.html
@@ -1,10 +1,10 @@
 <div class="card col-7 mx-auto">
     <div class="card-body">
-        <form [formGroup] = "changePasswordForm" (ngSubmit) = "onSubmit()">
+        <form id = "change-password-form" [formGroup] = "changePasswordForm" (ngSubmit) = "onSubmit()">
             <div class="form-group">
                 <mat-form-field appearance="fill" class="form-field">
                     <mat-label>Enter your old password</mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'"  formControlName ="oldPassword">
+                    <input id = "old-password" matInput [type]="hide ? 'password' : 'text'"  formControlName ="oldPassword">
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
@@ -15,7 +15,7 @@
                 <div class="form-group">
                     <mat-form-field appearance="fill" class="form-field">
                         <mat-label>Enter your new password</mat-label>
-                        <input matInput [type]="hide ? 'password' : 'text'"  formControlName ="password">
+                        <input id = "new-password" matInput [type]="hide ? 'password' : 'text'"  formControlName ="password">
                         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                         </button>
@@ -25,7 +25,7 @@
                 <div class="form-group">
                     <mat-form-field appearance="fill" class="form-field">
                         <mat-label>Repeat entered password</mat-label>
-                        <input matInput [type]="hide ? 'password' : 'text'"  formControlName ="confirmPassword"
+                        <input id = "repeat-password" matInput [type]="hide ? 'password' : 'text'"  formControlName ="confirmPassword"
                             [errorStateMatcher]="confirmPasswordMatcher">
                         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
@@ -37,6 +37,7 @@
             </div>
             <div>
                 <button
+                    id = "change-password-btn"
                     class="btn btn-theme"
                     type="submit"
                     [disabled] = "changePasswordForm.invalid"
