--- a/serbioneer-front/src/app/components/admin/categories/categories.component.html
+++ b/serbioneer-front/src/app/components/admin/categories/categories.component.html
@@ -32,7 +32,7 @@
                             </td>
                         </ng-container>
                     </table>
-                    <mat-paginator 
+                    <mat-paginator class="mat-elevation-z8"
                         [length]="categoryDataSource.totalElements" 
                         [pageSize]="categoryDataSource.size" 
                         [pageSizeOptions]="[2,5,10]"
@@ -98,7 +98,7 @@
                             </td>
                         </ng-container>
                     </table>
-                    <mat-paginator 
+                    <mat-paginator class="mat-elevation-z8"
                         [length]="typeDataSource.totalElements" 
                         [pageSize]="typeDataSource.size" 
                         [pageSizeOptions]="[2,5,10]"
