--- a/serbioneer-front/src/app/components/inline-edit/inline-edit.component.html
+++ b/serbioneer-front/src/app/components/inline-edit/inline-edit.component.html
@@ -1,12 +1,13 @@
-<form (ngSubmit)="onSubmit()">
+<form [formGroup]="editForm" (ngSubmit)="onSubmit()">
     <div class="mat-subheading-2">Edit {{ entity }} </div>
     
     <mat-form-field>
-      <input matInput name="edit" [(ngModel)]="edit">
+      <input matInput formControlName="editField" name="edit" [(ngModel)]="edit">
+      <mat-error *ngIf="editForm.get('editField')?.invalid">{{ getEditErrorMessage() }}</mat-error>
     </mat-form-field>
 
     <div class="actions">
       <button mat-button type="button" color="primary" (click)="onCancel()">Cancel</button>
-      <button mat-button type="submit" color="primary">Save</button>
+      <button mat-button type="submit" color="primary" [disabled]="editForm.invalid">Save</button>
     </div>
 </form>
