--- a/serbioneer-front/src/app/components/change-password/change-password.component.html
+++ b/serbioneer-front/src/app/components/change-password/change-password.component.html
@@ -8,7 +8,7 @@
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                     <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </button>
-                    <mat-error *ngIf="changePasswordForm.get('oldPassword')?.invalid">{{getRequiredFieldErrorMessage('oldPassword')}}</mat-error>
+                    <mat-error id = "oldPass-error" *ngIf="changePasswordForm.get('oldPassword')?.invalid">{{getRequiredFieldErrorMessage('oldPassword')}}</mat-error>
                 </mat-form-field>
             </div>
             <div formGroupName="passwordGroup">
@@ -16,10 +16,10 @@
                     <mat-form-field appearance="fill" class="form-field">
                         <mat-label>Enter your new password</mat-label>
                         <input id = "new-password" matInput [type]="hide ? 'password' : 'text'"  formControlName ="password">
-                        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                        <button id = "show-pass" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                         </button>
-                        <mat-error *ngIf="changePasswordForm.get('password')?.invalid">{{getRequiredFieldErrorMessage('password')}}</mat-error>
+                        <mat-error id = "newPass-error" *ngIf="changePasswordForm.controls.passwordGroup.get('password')?.invalid">{{getPasswordRequiredFieldErrorMessage('password')}}</mat-error>
                     </mat-form-field>
                 </div>
                 <div class="form-group">
@@ -30,8 +30,8 @@
                         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                         </button>
-                        <mat-error *ngIf="changePasswordForm.get('confirmPassword')?.invalid">{{getRequiredFieldErrorMessage('confirmPassword')}}</mat-error>
-                        <mat-error *ngIf="changePasswordForm.controls.passwordGroup.hasError('passwordsDontMatch')">{{getPasswordsMatch()}}</mat-error>
+                        <mat-error id = "repeatPass-error" *ngIf="changePasswordForm.controls.passwordGroup.get('confirmPassword')?.invalid">{{getPasswordRequiredFieldErrorMessage('confirmPassword')}}</mat-error>
+                        <mat-error id = "passwords-error" *ngIf="changePasswordForm.controls.passwordGroup.hasError('passwordsDontMatch')">{{getPasswordsMatch()}}</mat-error>
                     </mat-form-field>
                 </div>
             </div>
