--- a/serbioneer-front/src/app/components/newsfeed/news/news.component.sass
+++ b/serbioneer-front/src/app/components/newsfeed/news/news.component.sass
@@ -1,29 +1,18 @@
-.example-card
-  max-width: 600px
-
-.example-header-image 
-  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg')
-  background-size: cover
-
-.main-div
-  height: 100vh
+.news
   display: flex
   justify-content: center
   align-items: center
-  
 
-.example-item 
-  height: 100%
-  width: 100%
-  margin: 5px
+.news-card
+  min-width: 60%
+  margin-bottom: 32px
 
+.avatar
+  font-size: 40px  
 
-.cdk-virtual-scroll-viewport
-  overflow-y: hidden
-  overflow: scroll
-  -webkit-overflow-scrolling: touch
-  display: flex
-  flex-direction: row
-  writing-mode: vertical-lr
-  height: 400px
-  width: 400px
+.news-content
+  font-size: 16px
+  padding: 10px 40px
+
+.news-image-content
+  padding: 25px 60px
