--- a/serbioneer-front/src/app/components/newsfeed/newsfeed.component.html
+++ b/serbioneer-front/src/app/components/newsfeed/newsfeed.component.html
@@ -1,7 +1,5 @@
-<app-news *ngFor = "let news of dataSource.content" [news] = "news"></app-news>
-<mat-paginator 
-        [length]="dataSource.totalElements" 
-        [pageSize]="dataSource.size" 
-        [pageSizeOptions]="[2,5,10]"
-        (page)="onPaginateChange($event)"
-></mat-paginator>
+<h1 class="newsfeed-title">Newsfeed</h1>
+<div infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScroll()">
+        <app-news *ngFor = "let news of dataSource" [news] = "news">
+        </app-news>
+</div>
